--- a/ST.html
+++ b/ST.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>시멘틱 태그 사용 예제</title>
-    </head>
-    <body>
-        <header>
-            <h1>내 웹 페이지</h1>
-            <nav>
-                <a href="#section1">소개</a>
-                <a href="https://www.postype.com/@kimiwa-ore-jya-nai/post/18652107">서비스</a> 
-                <a href="#section3">연락처</a>
-            </nav>
-        </header>
-        <main>
-            <section id="section1">
-                <h2>소개</h2>
-                <p>이 웹페이지는 시멘틱 태그를 사용하는 방법을 보여 줍니다.</p>
-            </section>
-            <section id="section2">
-                <h2>서비스</h2>
-                <p>우리는 최고의 웹 개발 서비스를 제공합니다.</p>
-            </section>
-            <section id="section3">
-                <h2>연락처</h2>
-                <p>문의 사항은 이메일로 보내주세요: info@example.com</p>
-                <strong>장난금지!</strong>
-                <em>010-9999-9999</em>
-                <h3>참고</h3>
-                <P>이 웹페이지는 그린이가 만들었습니다</P>
-            </section>
-        </main>
-        <footer>
-            <p>2024,내 웹 페이지</p>
-        </footer>
-        <ol>
-      <ul>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>시멘틱 태그 사용 예제</title>
+</head>
+<body>
+    <header>
+        <h1>내 웹 페이지</h1>
+        <nav>
+            <a href="#section1">소개</a>
+            <a href="https://www.postype.com/@kimiwa-ore-jya-nai/post/18652107">서비스</a> 
+            <a href="#section3">연락처</a>
+        </nav>
+    </header>
+    <main>
+        <section id="section1">
+            <h2>소개</h2>
+            <p>이 웹페이지는 시멘틱 태그를 사용하는 방법을 보여 줍니다.</p>
+        </section>
+        <section id="section2">
+            <h2>서비스</h2>
+            <p>우리는 최고의 웹 개발 서비스를 제공합니다.</p>
+        </section>
+        <section id="section3">
+            <h2>연락처</h2>
+            <p>문의 사항은 이메일로 보내주세요: info@example.com</p>
+            <strong>장난금지!</strong>
+            <em>010-9999-9999</em>
+            <h3>참고</h3>
+            <p>이 웹페이지는 그린이가 만들었습니다</p>
+        </section>
+    </main>
+    <footer>
+        <p>2024, 내 웹 페이지</p>
+    </footer>
+
+    <ul>
         <li>프로그래밍 언어
-        <ul>
-            <li>Python</li>
-            <li>JavaScript</li>
-          </ul>
+            <ul>
+                <li>Python</li>
+                <li>JavaScript</li>
+            </ul>
         </li>
         <li>마크업 언어
-        <ol>
-            <li>html</li>
-            <li>xml</li>
-        </ol>
+            <ol>
+                <li>html</li>
+                <li>xml</li>
+            </ol>
         </li>
-        </ul>
-    </body>
+    </ul>
+</body>
 </html>
